snippets/Nemerle.Statechart/Tests/testsuite/positive/entry_point1.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#
  flags testing;
  
  state A
  {
    a => B.en;
    b => B;
  }
  
  state B
  {
    en: => D;
    b => A;
    
    [Initial]
    state C
    {
      a => D;
    }
    
    state D
    {
      a => C;
    }
  }
  
  #>)]
  public class example
  {
  }

  module Test
  {
    Main() : void
    {
      def fsm = example();
      def tester = fsm.GetTester();
      tester.ConsoleTestInit();
      tester.Initiate("A", "EntryA");
      tester.Test("b", "C", "ExitA", "EntryB", "EntryC");
      tester.Test("a", "D", "ExitC", "EntryD");
      tester.Test("a", "C", "ExitD", "EntryC");
      tester.Test("b", "A", "ExitC", "ExitB", "EntryA");
      tester.Test("a", "D", "ExitA", "EntryB", "EntryD");
      tester.Test("a", "C", "ExitD", "EntryC");
      fsm.Terminate();
    }
  }
  
/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'b' 
ExitA
EntryB
EntryC
[C]
Ok
Processing a 'a' 
ExitC
EntryD
[D]
Ok
Processing a 'a' 
ExitD
EntryC
[C]
Ok
Processing a 'b' 
ExitC
ExitB
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryD
[D]
Ok
Processing a 'a' 
ExitD
EntryC
[C]
Ok
END-OUTPUT
*/
