snippets/Nemerle.Statechart/Tests/testsuite/negative/submachine_not_found.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of example.
  /// </summary>
  [statechart(
  <#

  submachine A[B] // E: Statemachine "B" not found, during instantiation "SubMachineAoftypeB"
  {
  }
  
  #>)]
  public class example
  {
  }

